--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand --forceExit --coverage",
+    "start": "node ./bin/www.js",
+    "dev": "nodemon ./bin/www.js"
   },
   "repository": {
     "type": "git",
